--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "sharp": "^0.33.3"
   },
   "devDependencies": {
